...
              top: 50,
            ),
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Text(
                  'Create an account',
                  style: Fonts.largeTextBold,
                ),
                const SizedBox(height: 5),
                Text(
                  'Let’s help you set up your account,\nit won’t take long.',
                  style: Fonts.smallerTextRegular,
...
                      color: ColorStyles.secondary100Color,
                    ),
                  ),
                ),
                const SizedBox(height: 25),
                BigButton(
                  title: 'Sign Up',
                  onTap: () {
                    context.push('/home');
          
                  },
                ),
                const SizedBox(height: 20),
...
