...
            Text(
              'Hello Jega',
              style: Fonts.largeTextBold,
            ),
            const SizedBox(height: 5),
            Text(
              'What are you cooking today?',
              style: Fonts.smallerTextRegular.copyWith(
                color: ColorStyles.gray3Color,
              ),
            ),
            const SizedBox(height: 20),
            GestureDetector(
...
